fix: z-index for header

--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
+  z-index: 4;
 
   color: $white;
   transition: background 300ms, padding 300ms, box-shadow 300ms;
